# mini-plonk

./: Cargo.toml  kzg_srs.zkey  plonk.circuit  plonktest.circuit
src/: kzg_setup.rs  lib.rs  parser.rs  witness.json  witnesstest.json
