[package]
name = "mini-plonk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup"
path = "./src/kzg_setup.rs"

[[bin]]
name = "parser"
path = "./src/parser.rs"

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
rand = "0.8.5"
regex = "1.11.1"
